Reestructura del projecte completa (#8)