@@ -1,12 +1,13 @@
 package com.fpmislata.daw1.projectedaw1.persistance.dao.impl.jdbc;
 
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
+import java.util.List;
+
 import com.fpmislata.daw1.projectedaw1.domain.entity.Valoracio;
 import com.fpmislata.daw1.projectedaw1.persistance.dao.ValoracioDao;
-import com.fpmislata.daw1.projectedaw1.persistance.dao.impl.jdbc.database.DatabaseConnection;
-import com.fpmislata.daw1.projectedaw1.persistance.dao.impl.jdbc.rowmapper.ValoracioRowMapper;
-
-import java.sql.PreparedStatement;
-import java.util.List;
+import com.fpmislata.daw1.projectedaw1.persistance.database.DatabaseConnection;
+import com.fpmislata.daw1.projectedaw1.persistance.rowmapper.ValoracioRowMapper;
 
 public class ValoracioDaoJdbc implements ValoracioDao {
 
@@ -23,8 +24,9 @@ public class ValoracioDaoJdbc implements ValoracioDao {
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setString(1, isbn);
             preparedStatement.setString(2, username);
-            List<Valoracio> valoracioList = valoracioRowMapper.map(preparedStatement.executeQuery());
-            return valoracioList.isEmpty() ? null : valoracioList.get(0);
+            ResultSet rs = preparedStatement.executeQuery();
+            List<Valoracio> valoracioList = valoracioRowMapper.map(rs);
+            return valoracioList.isEmpty() ? null : valoracioList.getFirst();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
@@ -35,7 +37,8 @@ public class ValoracioDaoJdbc implements ValoracioDao {
         String sql = "SELECT * FROM valoracio where isbn = ?";
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setString(1, isbn);
-            return valoracioRowMapper.map(preparedStatement.executeQuery());
+            ResultSet rs = preparedStatement.executeQuery();
+            return valoracioRowMapper.map(rs);
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
@@ -46,56 +49,48 @@ public class ValoracioDaoJdbc implements ValoracioDao {
         String sql = "SELECT * FROM valoracio where username = ?";
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setString(1, username);
-            return valoracioRowMapper.map(preparedStatement.executeQuery());
+            ResultSet rs = preparedStatement.executeQuery();
+            return valoracioRowMapper.map(rs);
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
     }
 
     @Override
-    public void save(Valoracio valoracio) {
-        if (findByLlibreIsbnAndUsername(valoracio.getIsbn(), valoracio.getUsername()) != null) {
-            update(valoracio);
-        } else {
-            insert(valoracio);
-        }
-    }
-
-    @Override
-    public void insert(Valoracio valoracio) {
+    public int insert(Valoracio valoracio) {
         String sql = "INSERT INTO valoracio (isbn, username, puntuacio, data) VALUES (?, ?, ?, ?)";
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setString(1, valoracio.getIsbn());
             preparedStatement.setString(2, valoracio.getUsername());
             preparedStatement.setInt(3, valoracio.getPuntuacio());
             preparedStatement.setDate(4, java.sql.Date.valueOf(valoracio.getData()));
-            preparedStatement.executeUpdate();
+            return preparedStatement.executeUpdate();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
     }
 
     @Override
-    public void update(Valoracio valoracio) {
+    public int update(Valoracio valoracio) {
         String sql = "UPDATE valoracio SET puntuacio = ?, data = ? WHERE isbn = ? and username = ?";
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setInt(1, valoracio.getPuntuacio());
             preparedStatement.setDate(2, java.sql.Date.valueOf(valoracio.getData()));
             preparedStatement.setString(3, valoracio.getIsbn());
             preparedStatement.setString(4, valoracio.getUsername());
-            preparedStatement.executeUpdate();
+            return preparedStatement.executeUpdate();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
     }
 
     @Override
-    public void delete(String isbn, String username) {
+    public int delete(String isbn, String username) {
         String sql = "DELETE FROM valoracio WHERE isbn = ? and username = ?";
         try (PreparedStatement preparedStatement = databaseConnection.prepareStatement(sql)) {
             preparedStatement.setString(1, isbn);
             preparedStatement.setString(2, username);
-            preparedStatement.executeUpdate();
+            return preparedStatement.executeUpdate();
         } catch (Exception e) {
             throw new RuntimeException(e.getMessage());
         }
